--- a/cpp/kiss_icp/core/CMakeLists.txt
+++ b/cpp/kiss_icp/core/CMakeLists.txt
@@ -22,6 +22,6 @@
 # SOFTWARE.
 add_library(core STATIC)
 add_library(kiss_icp::core ALIAS core)
-target_sources(core PRIVATE Registration.cpp Deskew.cpp VoxelHashMap.cpp Preprocessing.cpp Threshold.cpp)
+target_sources(core PRIVATE Registration.cpp Deskew.cpp VoxelHashMap.cpp Preprocessing.cpp Threshold.cpp EgoMotionEstimation.cpp)
 target_link_libraries(core PUBLIC Eigen3::Eigen tsl::robin_map TBB::tbb Sophus::Sophus)
 set_global_target_properties(core)
